--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mdp_group25">
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,14 +11,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".BluetoothDeviceActivity"/>
-        <activity android:name=".RobotControlActivity"/>
-        <activity android:name=".RobotControlManualActivity"/>
-        <activity android:name=".MainActivity">
+        <activity android:name=".RobotControlActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".RobotControlManualActivity"/>
+        <activity android:name=".MainActivity">
         </activity>
     </application>
 
