--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".BluetoothDeviceActivity"/>
-        <activity android:name=".RobotControlActivity">
-        <activity android:name=".FunctionsActivity"></activity>
+        <activity android:name=".RobotControlActivity" />
+        <activity android:name=".RobotControlManualActivity" />
+        <activity android:name=".FunctionsActivity" />
         <activity android:name=".DebugActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -20,9 +21,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".RobotControlManualActivity"/>
-        <activity android:name=".MainActivity">
         </activity>
     </application>
 
